Make a single provider of Gson (except when pretty printing is required) with all the necessary adapters from our classes [Fixes #156339802]